external-crates/move/crates/move-compiler/tests/move_2024/typing/duplicate_defines_primitive.snap
error[E10004]: invalid usage of known attribute
  ┌─ tests/move_2024/typing/duplicate_defines_primitive.move:4:3
  │
2 │ module a::m {}
  │           - Previously declared here
3 │ 
4 │ #[defines_primitive(signer)]
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate definer annotated for primitive type 'signer'

